# lanbridge

./: .gitignore  LICENSE  README.md  entry.py  pyproject.toml
.github/workflows/: release.yml
docker/: Dockerfile  deploy-relay.sh  docker-compose.yml
lanbridge/: __init__.py  __main__.py  cli.py  forwarder.py  relay.py  upnp.py  vpn_bypass.py
lanbridge/core/: __init__.py  crypto.py  tunnel.py  vpn.py
lanbridge/platform/: __init__.py  tun_device.py
